--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <p>by @carlosmlopez066</p>
         <a href="gmail.com">carlosmlopez066@gmail.com</a>
     </footer>
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="./src/main.js"></script>
 </body>
 
 </html>
