--- a/index.html
+++ b/index.html
@@ -16,18 +16,24 @@
     <header>
         <div class="header-logo"></div>
         <h1>LearnBarberClub</h1>
+        <select name="Barber" id="BarberID">
+            <option value="">JhonStyleetv</option>
+            <option value="">ChempteBarber</option>
+            <option value="">BoriBarber</option>
+        </select>
+
     </header>
-    <main>
+    <main id="main">
         <div class="main-videoContainer">
             <h2 class="main-channel-title">Channel title</h2>
             <div class="main-photo-video"></div>
             <p class="main-title-video">title Video</p>
         </div>
-        <div class="main-videoContainer">
+        <!-- <div class="main-videoContainer">
             <h2 class="main-channel-title">Channel title</h2>
             <div class="main-photo-video"></div>
             <p class="main-title-video">title Video</p>
-        </div>
+        </div> -->
 
     </main>
     <footer>
