change API button

--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
     <header>
         <div class="header-logo"></div>
         <h1>LearnBarberClub</h1>
-        <select name="Barber" id="BarberID">
-            <option value="">JhonStyleetv</option>
-            <option value="">ChempteBarber</option>
-            <option value="">BoriBarber</option>
-        </select>
+        <button id="jhonStyle">jhonStyle</button>
+        <button id="chemote">Chemote</button>
 
     </header>
     <main id="main">
